fixed on mobile

--- a/src/Partners.css
+++ b/src/Partners.css
@@ -5,7 +5,7 @@
 
 .partners-title {
   font-size: 2em;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   font-weight: bold;
   color: #333;
   font-family: "tkt";
@@ -49,8 +49,9 @@
   }
 
   .partner-slide {
-    padding: 15px;
-    margin: 5px;
+    padding: 10px;
+    margin: 0px;
+    border: 1px solid rgb(209, 209, 209);
   }
 
   .partner-logo {
